# pimsr-forward

./: README.md  pyproject.toml
src/pimsr_forward/: __init__.py  cli.py  cli2d.py  cli3d.py  dataset.py  dataset2d.py  dataset3d.py  gravity.py  mt1d.py  mt2d.py  mt3d.py  sensors.py
tests/: test_dataset2d_v3.py  test_distortion.py  test_gravity.py  test_mt1d.py  test_mt2d.py  test_mt3d.py  test_sensors_dataset.py
