[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "pimsr-forward"
version = "0.1.0"
description = "MT + gravity forward modeling, sensor simulation and dataset builder (PIMSR)"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
authors = [{ name = "TheLitis" }]
dependencies = [
    "numpy>=1.24",
    "h5py>=3.8",
    "pimsr-geogen @ git+https://github.com/TheLitis/pimsr-geogen.git",
]

[project.optional-dependencies]
dev = ["pytest>=7", "ruff>=0.4"]
mt2d = ["simpeg>=0.25", "discretize>=0.12"]

[project.scripts]
pimsr-forward-dataset = "pimsr_forward.cli:main"
pimsr-forward-dataset2d = "pimsr_forward.cli2d:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 96
target-version = "py310"

[tool.pytest.ini_options]
testpaths = ["tests"]
